tests/ui/const-generics/type_not_in_scope.stderr
error[E0412]: cannot find type `X` in this scope
  --> $DIR/type_not_in_scope.rs:1:6
   |
LL | impl X {
   |      ^ not found in this scope

error[E0573]: expected type, found built-in attribute `cfg_attr`
  --> $DIR/type_not_in_scope.rs:7:18
   |
LL | fn getn<const N: cfg_attr>() -> [u8; N] {}
   |                  ^^^^^^^^ not a type

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0412, E0573.
For more information about an error, try `rustc --explain E0412`.
